--- a/A_dbms/templates/dbms/agree/agree_board/loan_en/e-01-text-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_en/e-01-text-1.html
@@ -1,33 +1,33 @@
 {% load static %}
 <p>鉴于借款人向贷款人申请贷款，为明确双方权利义务，借款人与贷款人经协商一致，特订立本合同。</p>
-<p><strong>第一条 贷款金额、贷款期限与贷款用途</strong></p>
+<p><strong>第一条  贷款金额、贷款期限与贷款用途</strong></p>
 <p>1.1贷款金额：本合同项下的贷款金额为人民币（大写）<u><strong>{{ agree_amount_cn }}</strong></u>（RMB<u>{{ agree_amount_y }}</u>元）。</p>
 <p>1.2贷款期限：贷款期限为<u><strong>{{ agree_term_cn }}</strong></u>个月零<u><strong>/</strong></u>天，自<strong><u>{{ agree_obj.agree_start_date }}</u></strong>始至<strong><u>{{ agree_obj.agree_due_date }}</u></strong>止。《借款凭证》是贷款人向借款人实际提供资金的最终证明，是本合同的组成部分，与本合同具有同等法律效力。若《借款凭证》记载的贷款起始日期、到期日期与本合同约定的贷款起始日期、到期日期不一致的，以《借款凭证》的记载为准。</p>
 <p>1.3贷款用途为：<u><strong>流动资金</strong></u>。未经贷款人书面同意，借款人不得以任何理由将贷款挪作他用。</p>
-<p>1.4<strong>本合同一经签署，在贷款发放之前，借款人若欲取消本合同项下部分或全部贷款，应书面通知贷款人并取得贷款人的书面同意；取消贷款受理期间为距离取消贷款日不少于七个贷款人营业日前。</strong></p>
-<p><strong>第二条 贷款利率、计息期间</strong></p>
+<p>1.4 <strong>本合同一经签署，在贷款发放之前，借款人若欲取消本合同项下部分或全部贷款，应书面通知贷款人并取得贷款人的书面同意；取消贷款受理期间为距离取消贷款日不少于七个贷款人营业日前。</strong></p>
+<p><strong>第二条  贷款利率、计息期间</strong></p>
 <p>2.1本合同项下贷款利率为<strong>月利率<u>{{ agree_obj.agree_rate }}</u>‰</strong>（大写<strong><u>千分之{{ agree_rate_cn_q }}</u></strong>），在贷款期限内保持不变。</p>
 <p><strong>贷款到期日前若遇中国人民银行调整贷款基准利率，本合同项下贷款利率若需依据新的相应档次贷款基准利率作相应调整的，由贷款人、借款人另行以书面补充协议确认确定；未另行以书面补充协议确认确定的，则本合同项下贷款利率仍执行本款明确载明的贷款利率。</strong></p>
 <p>2.2计息期间自贷款人指定的银行划款或现金交付之日始，至借款人实际偿付贷款本息前一日止。若贷款人发放贷款划拨日与实际到达借款人账户日不一致的，则以划拨日为准；若借款人偿付贷款本息划拨日与贷款人实际收到日不一致的，则以贷款人实际收到日推算计息截止日。</p>
 <p>2.3经贷款人同意的贷款展期，期限累计计算。</p>
-<p><strong>第三条 费用及税金</strong></p>
+<p><strong>第三条  费用及税金</strong></p>
 <p>无论本合同项下贷款最终是否发放、撤销或取消，借款人必须支付或承担与本合同有关的如下费用：</p>
 <p>（1）为本合同谈判、起草、签字、公证（如需）等而发生的相关费用，包括但不限于抵押物评估费、会计师费（若有）、律师费（若有）、合同公证费（如有）、抵押、质押的登记与注销费等；</p>
 <p>（2）贷款人因借款人违约，为实现债权而实际发生的相关费用，包括但不限于诉讼费、诉讼保全费、强制执行费、合理的律师代理费、差旅费等；</p>
 <p>（3）与本合同有关的印花税等税费；</p>
 <p>（4）其他依法应由借款人承担的费用等。</p>
-<p><strong>第四条 先决条件</strong></p>
-<p>4.1在贷款人向借款人发放贷款前，若没有出现任何限制贷款人按本合同约定发放贷款包括但不限于法律法规的变化、货币及/或信贷政策的等客观情况，在借款人符合了4.2款条件时，贷款人可以发放贷款。</p>
+<p><strong>第四条  先决条件</strong></p>
+<p>4.1在贷款人向借款人发放贷款前，若没有出现任何限制贷款人按本合同约定发放贷款的变化，包括但不限于法律法规的变化、信贷政策的调整等客观情况，在借款人符合了4.2款规定的条件时，贷款人可以发放贷款。</p>
 <p>4.2借款人在提款前须向贷款人提供下列文件，并符合下列条件：</p>
-<p>（1）借款人已按贷款人要求提交相关身份及资信证明文件、办妥相关前置手续及贷款人认为必要的其他有关文件复印件；</p>
-<p>（2）本合同第八条之陈述和保证真实、合法、有效；</p>
+<p>（1） 借款人营业执照、公司章程、证明借款人股东已按期足额出资的验资报告、组织机构代码证及贷款人认为必要的其他有关其公司成立文件的复印件；</p>
+<p>（2） 借款人已向贷款人提交依其章程等规定就本合同相关事项进行有效表决（决定）并符合贷款人要求的股东会（股东大会）或董事会决议书等文件；</p>
 <p>（3）<strong>本合同项下担保合同已生效并完成抵（质）押登记、交付致担保权持续有效；</strong></p>
-<p>（4）借款人在实际提款之前应将符合5.2款贷款人要求的还款扣划协议副本提供给贷款人；</p>
-<p>（5）借款人、担保人已授权贷款人查询征信系统，提供了借款人、担保人相关资料，且查询结果符合贷款人要求；</p>
-<p>（6）本合同已经各方有权人（授权代表）签署及加盖公章，并经公证赋予强制执行效力；</p>
+<p>（4）借款人、担保人已授权贷款人查询征信系统，提供了借款人、担保人相关资料，且查询结果符合贷款人要求；</p>
+<p>（5）本合同第八条之陈述和保证真实、合法、有效；</p>
+<p>（6）本合同及其相关从合同已经各方有权人（授权代表）签署及加盖公章，并经公证赋予强制执行效力；</p>
 <p>（7）贷款人或其指定之律师认为必要的及合理要求的其他先决条件。</p>
 <p>若上述手续未完全齐备，或所有必须的文件尚未达到贷款人或相关法律机构的要求，则贷款人有权不予发放本合同项下贷款，相应后果由借款人全部承担。</p>
-<p><strong>第五条 贷款偿还</strong></p>
+<p><strong>第五条  贷款偿还</strong></p>
 <p>5.1本合同项下，借款人以壹月为一期，按期还款，首期自2.2款规定之放款日起计算。计算一期的正常利息采用月利率，本合同项下利率转换方式为：月利率=年利率/12；日利率=年利率/360。</p>
 <p>本合同采取以下第<u><strong>（{% if agree_obj.repay_method == 11 %}1{% elif agree_obj.repay_method == 21 %}2{% elif agree_obj.repay_method == 31 %}3{% endif %}）</strong></u>项方式还款：</p>
 <p>（1）按月付息、到期一次还本法：借款人每月付息，贷款到期日一次性偿还贷款本金。当月利息=贷款本金×日利率×占用天数。</p>
@@ -47,15 +47,16 @@
 <p>（1）借款人承诺并保证，还款日前将该期应还款项足额存入还款账户；</p>
 <p>（2）借款人承诺并保证，在整个借款合同有效期内或全部清偿完所有本息及相关费用之前，借款人不会注销上述账户；若上述借款人账户发生挂失、冻结、止付、结清或借款人需要变更上述账户的，借款人应及时书面通知贷款人并办理还款账户变更手续；因借款人未及时书面通知并变更还款账户或其他任何原因导致未按期足额清偿到期借款本息及其他费用的，借款人应承担违约责任；</p>
 <p>（3）借款人承诺并保证，上述开户行应按贷款人还款通知或还款指示将借款人当期应当归还的还款金额划入贷款人指定的账户。上述银行因任何原因拒绝划款或未按要求划款视为借款人违约。</p>
-<p>5.4借款人死亡、丧失民事行为能力或经人民法院宣告失踪、死亡的，应由借款人的合法继承人或财产代管人在借款人财产范围内清偿所欠款项，若借款人无继承人或财产代管人，或继承人或财产代管人拒绝或者怠于履行清偿义务的，贷款人有权按照本合同第十二条追究其违约责任。</p>
-<p><strong>第六条 扣划约定</strong></p>
+<p>（4）除本合同项下的债务外，若借款人对贷款人还负有其他到期或提前到期债务的，贷款人有权将根据本合同获得的偿还款项优先抵销任何一笔其他到期和/或提前到期债务，而借款人仍应按照本合同约定的期限返还当期应还之本金利息。</p>
+<p>5.4借款人合并、分立、歇业、解散、被撤销、营业执照被吊销、申请或被申请破产，应由借款人财产代管人、清算人或其他权利义务承继人在借款人财产范围内清偿所欠款项，若借款人无权利义务承继人，或权利义务承继人拒绝或者怠于履行清偿义务的，贷款人有权按照本合同第十二条追究其违约责任。</p>
+<p><strong>第六条  扣划约定</strong></p>
 <p>6.1贷款人根据5.2款扣划后，贷款人应将扣划所涉账号、借款合同号、《借款凭证》编号、扣划金额及剩余的债务金额通知借款人。</p>
 <p>6.2扣划所得款项不足以清偿借款人全部债务时，应按下列顺序进行清偿：</p>
 <p>（1）按本合同约定应由借款人支付的费用、补偿金、违约金、赔偿金（如有）；</p>
 <p>（2）贷款利息；</p>
 <p>（3）贷款本金。</p>
 <p>6.3扣划所得款项与需抵偿的债务币种不一致的，按5.2款规定之受托银行在扣划日公布的汇率折算为抵偿债务的金额。</p>
-<p><strong>第七条 挪用贷款、逾期、部分还款与提前还款</strong></p>
+<p><strong>第七条  挪用贷款、逾期、部分还款与提前还款</strong></p>
 <p>7.1借款人挪用贷款即不按本合同约定用途使用贷款的，<strong>借款人除对挪用贷款按本合同约定贷款利率按日计算向贷款人支付利息外，</strong>自挪用之日起至挪用终结之日止，还应按挪用贷款本金的万分之<u><strong>{{ agree_rate_w }}</strong></u>/天的标准向贷款人加付违约金。</p>
 <p>7.2借款人不按本合同约定期限归还贷款本金即贷款本金归还逾期的，<strong>借款人除对逾期贷款本金按本合同约定贷款利率按日计算向贷款人支付利息外，</strong>自逾期之日起至贷款本金清偿之日前一日止，还应按逾期贷款本金的万分之<u><strong>{{ agree_rate_w }}</strong></u>/天的标准向贷款人加付违约金。</p>
 <p>7.3借款人不按本合同约定的结（付）息日支付利息即贷款利息支付逾期的，<strong>借款人除应向贷款人支付应付利息外，</strong>自利息逾期之日起至利息清偿之日前一日止，借款人还应向贷款人加付违约金，贷款期限内按逾期利息的万分之<u><strong>{{ agree_rate_w }}</strong></u>/天的标准计算，贷款期限届满次日起按逾期利息的万分之<u><strong>{{ agree_rate_w }}</strong></u>/天的标准计算；利息逾期跨越贷款期限内、外两个时段的，本款违约金应分时段计算、合并收取。</p>
@@ -64,61 +65,62 @@
 <p>7.6借款人可以在第一期之后的任一期还款日（最后一期的还款日除外）七日前对贷款人做出提前还款意向的书面申请。借款人提前还款经贷款人书面同意的，借款人可以提前偿还部分或全部贷款。借款人若提前全部还款的，必须先结清提前还款日的当期应缴本金和利息，再核算并归还全部未清偿的本金。提前还款申请应列明提前还款的日期和金额，提前还款书面申请一经贷款人同意即为不可撤销。</p>
 <p>7.7如果借款人申请提前还款时存在挪用贷款或逾期归还贷款本金或逾期支付利息情形的，除了应当按照7.5款、7.6款约定向贷款人支付相应款项之外，还应当按照本合同7.1、7.2、7.3款向贷款人支付相应的违约金。</p>
 <p><strong>第八条  借款人的陈述与保证</strong></p>
-<p>8.1借款人是依法设立并合法存续的民事主体，签署和履行本合同是借款人真实的意思表示，并经过所有必须的同意、批准及授权，包括但不限于董事会或股东会（股东大会）的决议通过及有关主管部门审批通过等，不存在任何法律上的瑕疵。</p>
+<p>8.1签署和履行本合同是借款人真实的意思表示，不存在任何法律上的瑕疵。</p>
 <p>8.2 借款人在签署和履行本合同过程中向贷款人提供的全部文件、报表、资料及信息是真实、准确、完整和有效的，未向贷款人隐瞒、遗漏、虚假或误导性陈述可能影响其财务状况和还款能力的任何信息。</p>
-<p>8.3借款人自愿接受贷款人检查、监督贷款的使用情况，接受贷款人了解其计划执行、经营管理、财务活动、物资库存等情况，并应贷款人要求提供有关的资料和凭证，并且对所提供资料的真实性、完整性和有效性负责，不提供虚假材料或隐瞒重要事实。</p>
+<p>8.3借款人自愿接受贷款人检查、监督贷款的使用情况，接受贷款人了解其计划执行、经营管理、财务活动、物资库存等情况，并应贷款人要求提供有关的计划、统计、财务会计报表及资料包括但不限于财务/会计审计报告、会计账簿、缴税凭证、企业营业活动相关主要如水、电、气、购买存货/生产原材料等付款/费凭证，并且对所提供资料的真实性、完整性和有效性负责，不提供虚假材料或隐瞒重要经营财务事实。</p>
 <p>8.4借款人应随时执行贷款人为实现本合同项下的各项权利和利益而发出的任何指示，发出贷款人可能要求发出的与本合同有关的各项通知、命令和指示；签署贷款人可能要求签署的与本合同有关的法定的或其他的抵押合同、质押合同、转让合同或其他合同以完善贷款人在本合同项下的各项权利和利益。</p>
 <p>8.5在借款人完全清偿本合同项下贷款本金、利息、违约金和其他费用前，未经贷款人书面同意，借款人不得对任何第三人提供任何形式的担保。</p>
-<p>8.6除已向贷款人披露的之外，不存在针对或影响借款人及其家庭成员和/或其任何资产或财产的未决的民事、刑事、行政或其他诉讼、程序、调查、仲裁请求或命令（合称“诉求”），不存在任何有关该等诉求的依据或发生的可能，也不存在将导致任何该等诉求发生的事实；不存在针对借款人及其家庭成员的任何未执行的判决或以借款人及其家庭成员和/或其任何资产或财产为标的诉讼保全；在法院、仲裁机构或政府权力机构没有任何针对借款人及其家庭成员和/或其任何资产或财产，限制或禁止拟发生交易的未决的诉讼或其他法律程序。</p>
-<p>8.7除已向贷款人披露的之外，借款人对其他人包括但不限于私人、银行、非银行金融机构没有任何到期未偿还债务或申请延期偿还或其他影响其偿还能力之事由。</p>
+<p>8.6 除已向贷款人披露的之外，不存在针对或影响借款人和/或其任何资产或财产的未决的民事、刑事、行政或其他诉讼、程序、调查、仲裁请求或命令（合称“诉求”），不存在任何有关该等诉求的依据或发生的可能，也不存在将导致任何该等诉求发生的事实；不存在针对借款人的任何未执行的判决或以借款人和/或其任何资产或财产为标的的诉讼保全；在法院、仲裁机构或政府机构没有任何针对借款人和/或其任何资产或财产，限制或禁止拟发生交易的未决的诉讼或其他法律程序。</p>
+<p>8.7 除已向贷款人披露的之外，借款人对其他人包括但不限于私人、银行、非银行金融机构没有任何到期未偿还债务或申请延期偿还或其他影响其偿还能力之事由。</p>
 <p>8.8本合同的签订和履行不违反借款人作为一方当事人的其他合同、协议和法律法规及规章。</p>
 <p>8.9借款人不得抽逃资金、转移资产或利用关联交易，以逃避对贷款人的债务。</p>
-<p><strong>第九条 贷款人的权利与义务</strong></p>
+<p><strong>第九条  贷款人的权利与义务</strong></p>
 <p>9.1贷款人有权按照本合同约定收回贷款本金、利息、违约金，收取借款人应付的费用，行使法律规定或本合同约定的其他权利。</p>
 <p>9.2贷款人及贷款人的往来银行有权向中国人民银行、中国银联股份有限公司及其他机构或单位查询借款人的信用记录或其他包括但不限于通讯、水、电、气费等缴费状况以作为贷款授予与否和授予持续与否的参考；贷款人并有权将借款人的信用信息提供给中国人民银行信用信息基础数据库或其他依法设立的信用数据库。</p>
 <p>9.3贷款人有权将本合同规定的债权转让给第三人。</p>
 <p>9.4贷款人应当对借款人提供的资料及信息保密，但法律另有规定或本合同另有约定的除外。</p>
 <p><strong>第十条  借款人的权利与义务</strong></p>
 <p>10.1借款人有权要求贷款人按合同的约定发放贷款。</p>
-<p>10.210.2借款人有权要求贷款人对其提供的有关财务资料、生产经营等方面的资料、信息予以保密，但法律法规和规章另有规定及本合同另有约定的除外。</p>
-<p>10.3借款人应当按本合同约定的时间、金额和币种偿还本合同项下的贷款本金并支付利息、违约金、赔偿金、费用等。</p>
+<p>10.2借款人有权要求贷款人对其提供的有关资料、信息予以保密，但法律法规和规章另有规定及本合同另有约定的除外。</p>
+<p>10.3借款人应当按本合同约定的时间、金额和币种偿还本合同项下的贷款本金并支付利息。</p>
 <p>10.4借款人不应将本合同项下贷款挪作他用。</p>
 <p>10.5借款人应遵循贷款人与办理贷款业务相关的业务制度及操作惯例，包括但不限于配合贷款人对贷款使用情况和借款人经营情况的监督检查，及时提供贷款人要求的一切财务报表、其他资料及信息，并保证所提供文件、资料和信息是真实、完整、准确的。</p>
-<p>10.6借款人在下列任一事项发生或可能发生之日前十五日内书面通知贷款人，并且，在清偿本合同项下贷款本息或提供贷款人认可的还款方案及担保前不应采取行动：</p>
-<p>（1）借款人姓名、住所、联系方式、经营范围及方式发生变更；</p>
-<p>（2）借款人出售、出租、转移或以其他方式处分个人或商号资产的全部或大部分；</p>
-<p>（3）借款人或其家庭成员的工作、收入发生重大变化、承担大笔金钱债务或责任或者有大笔金钱债务到期未清偿；</p>
-<p>（4）对借款人还款能力有或可能有重大不利影响的诉讼、仲裁、行政措施、财产保全措施、强制执行措施或其他重大不利事件；</p>
-<p>（5）为第三方提供担保，包括但不限于保证、抵押、质押；</p>
-<p>（6）抵押物被列入拆迁范围的；</p>
-<p>（7）签署对其经营和财务状况有重大影响的合同；</p>
-<p>（8）借款人、借款人家庭成员、借款人的负责人或主要管理人员涉及违法活动，被或可能被列为犯罪嫌疑人，已经或可能被刑事侦查机关、行政机关等通知参加听证、提出抗辩、提供证据、接受处罚、缴纳罚款或被申请执行；</p>
-<p>（9）经营出现严重困难，财务状况恶化，或发生对借款人经营、财务状况或偿债能力有负面影响的其他事件。</p>
-<p>10.7本合同项下的担保发生不利于贷款人债权的变化时，借款人应按贷款人的要求及时提供贷款人认可的其他担保。</p>
+<p>10.6借款人有下列任一事项时，应当至少提前十五日书面通知贷款人，并且，在本合同项下贷款本息清偿前或借款人提供贷款人认可的还款及担保方案前不应采取行动：</p>
+<p>（1）出售、出租、出借或以其他方式处分重要资产、股权、股份、资产的全部或大部分。但赠与、抵押、质押重要资产、股权、股份、资产的，须经贷款人书面同意；</p>
+<p>（2）归还股东贷款及／或派发股息；</p>
+<p>（3）经营体制或产权组织形式发生或可能发生重大变化，包括但不限于实施承包、租赁、联营、公司制改造、股份合作制改造、企业出售、合并（兼并）、合资（合作）、分立、设立子公司、产权转让、减资等。</p>
+<p>10.7借款人应当在下列事项发生或可能发生之日前十五日内书面通知贷款人：</p>
+<p>（1）修改章程，变更企业名称、控股股东、合伙人、合作人、法定代表人（负责人）、董事、监事、经营范围、注册资本金、住所、通讯地址或营业范围等工商登记事项或未通过工商登记机关年度检验，做出对财务、人事有重大影响的决定；</p>
+<p>（2）借款人或担保人拟申请破产或可能或已被债权人申请破产；</p>
+<p>（3）涉及重大诉讼或仲裁案件，或者主要资产被采取了财产保全等强制措施；</p>
+<p>（4）签署对其经营和财务状况有重大影响的合同；</p>
+<p>（5）借款人或担保人停产、歇业、解散、停业整顿、被撤销或营业执照被吊销；</p>
+<p>（6）借款人、借款人的法定代表人（负责人）或主要管理人员涉及违法活动，被或可能被列为犯罪嫌疑人，已经或可能被刑事侦查机关、行政机关等通知参加听证、提出抗辩、提供证据、接受处罚、缴纳罚款或被申请执行；</p>
+<p>（7）经营出现严重困难，财务状况恶化，或发生对借款人经营、财务状况或偿债能力有负面影响的其他事件。</p>
+<p>10.8本合同项下的担保发生不利于贷款人债权的变化时，借款人应按贷款人的要求及时提供贷款人认可的其他担保。</p>
 <p>本款所称“变化”包括但不限于：担保人停产、歇业、解散、停业整顿、被撤销、营业执照被吊销、申请或被申请破产；担保人的经营或财务状况有重大变化；担保人涉及重大诉讼或仲裁案件；担保物的价值减少或可能减少或被采取财产保全等强制措施；担保人在担保合同项下有违约行为；担保人与借款人发生争议；担保人要求解除担保合同；担保合同未生效或无效或被撤销；担保物权不成立或无效；或影响贷款人债权安全的其他事件等。</p>
-<p>10.8未经贷款人书面同意，借款人不得转让其在本合同下的任何义务和责任。</p>
-<p>10.9借款人不得抽逃资金、转移资产或利用关联交易，以逃避对贷款人的债务。</p>
-<p><strong>第十一条 贷款的提前到期</strong></p>
+<p>10.9未经贷款人书面同意，借款人不得转让其在本合同下的任何义务和责任。</p>
+<p>10.10借款人不得抽逃资金、转移资产或利用关联交易，以逃避对贷款人的债务。</p>
+<p><strong>第十一条  贷款的提前到期</strong></p>
 <p>出现下列任一情形时，贷款人有权停止支付借款人尚未使用的贷款，单方面宣布合同项下已发放的贷款本金部分或全部提前到期，借款人应于贷款人当面递交（送达）贷款提前到期通知之日起二个工作日内或贷款人按本合同约定通讯地址向借款人寄出贷款提前到期通知之日起三个工作日（同城）或四个工作日（国内异地）内，偿还所有到期贷款本金并结清利息：</p>
 <p>（1）借款人在第八条项下所作陈述与保证不真实；</p>
-<p>（2）10.6款所列应通知的任何事项之一实际发生，贷款人认为将影响其债权的安全；</p>
-<p>（3）借款人拒绝或者没有能力根据10.7款提供补充担保；</p>
+<p>（2）10.6款、10.7款所列应通知的任何事项之一实际发生，贷款人认为将影响其债权的安全；</p>
+<p>（3）借款人拒绝或者没有能力根据10.8款提供补充担保；</p>
 <p>（4）借款人在履行与贷款人订立的其他合同时，有迟延履行等违约行为且经贷款人催告后仍未予以纠正；</p>
-<p>（5）本合同以外的其他借款、担保、赔偿、承诺或任何其他债务因违约而被勒令提前偿还或履行或到期而不能如期偿还或履行，以致贷款人认为影响或可能影响借款人在本合同下的履约能力。</p>
-<p><strong>第十二条 违约及违约责任</strong></p>
-<p>12.1借款人及/或担保人出现下述任一情形的均属违约（本款未列举但借款人违反了本合同其他条款约定义务的行为亦属违约）：</p>
-<p>（1）申请发放贷款应满足的先决条件信息为伪造或失真；</p>
-<p>（2）在本合同第八条中所作出的陈述是不真实、不准确或具有误导性的，或者违反其保证；任何与本合同有关的批准或许可，被证实失效或没有法律效力或被撤销的；</p>
-<p>（3）提供虚假材料或隐瞒重要经营财务事实的；</p>
-<p>（4）于本合同签署后拒不签署和/或提供与本合同有关的任何文件和/或情况，包括但不限于借款人/保证人最新财务报表，担保物的最新文件/现状/租赁情况等；</p>
-<p>（5）未按本合同约定的期限（包括提前到期的情况）及金额还本付息的、拖欠与本合同有关的应由其承担的任何费用的；</p>
-<p>（6）未经贷款人同意，擅自改变贷款原定用途或未按约定方式支用贷款资金，挪用贷款或用贷款人发放的贷款从事非法、违规交易的；</p>
-<p>（7）其不动产或其他重要财产被查封、扣押、冻结或被采取其他强制措施；</p>
-<p>（8）贷款人有理由认为借款人存在有意逃废债务行为的；</p>
-<p>（9）担保物因任何原因而贬值，而根据贷款人或其认可的评估机构所作重新评估，担保物已明显地不能或不足以作为借款人偿还欠款的担保，而借款人不能按贷款人要求及时提供新的担保或增加担保以弥补其不足或提前偿还部分贷款的；</p>
-<p>（10）未经贷款人书面同意，擅自通过赠与、舍弃、交换、预售、出售、租赁、再抵押、出借、托管或以其他任何方式处分抵押物的；</p>
-<p>（11）突破约定的财务指标约束、信用状况下降等情形；</p>
-<p>（12）贷款人认为借款人违反本合同的其他约定事项或有任何情势发生或持续而可能导致贷款人于本合同项下的债权实现受到不利威胁或实质性损害的情形。</p>
+<p>（5）本合同以外的其他借款、担保、赔偿、承诺或任何其他债务因违约或其他事由而被勒令提前偿还、到期或提前到期、合同解除、赔偿或者其他不能按合同正常履行的情况，以致贷款人认为影响或可能影响借款人在本合同下的履约能力。</p>
+<p><strong>第十二条  违约及违约责任</strong></p>
+<p>12.1 借款人及/或担保人出现下述任一情形的均属违约（本款未列举但借款人违反了本合同其他条款约定义务的行为亦属违约）：</p>
+<p>（1）申请发放贷款应满足的先决条件信息为伪造或失真，或提供虚假材料或隐瞒重要经营财务事实的；</p>
+<p>（2）在本合同中所作的陈述与保证是错误的、不真实、不准确或具有误导性的，任何与本合同有关的批准或许可，被证实失效或没有法律效力或被撤销的；</p>
+<p>（3）未按本合同约定的期限（包括提前到期的情况）及金额还本付息的、拖欠与本合同有关的应由其承担的任何费用的；</p>
+<p>（4）于本合同签署后拒不签署和/或提供与本合同有关的任何文件和/或情况，包括但不限于借款人还款来源的情况等；</p>
+<p>（5）未经贷款人同意，擅自改变贷款原定用途或未按约定方式支用贷款资金，挪用贷款或用贷款人发放的贷款从事非法、违规交易的；</p>
+<p>（6）通过关联交易，有意逃废债务的；</p>
+<p>（7）不配合贷款人或保证人对其经营、财务状况、收入情况和资信情况的监督、检查；或不及时提供贷款人或保证人要求的一切财务报表、其他资料及信息；或其提供的资料或信息是不真实、不完整和不准确的；</p>
+<p>（8）业务经营前景、财务状况、重要财产出现影响其履行本合同能力的不利变化，包括但不限于主要财务指标恶化、突破约定的财务指标约束、信用状况下降、歇业或准备歇业，或未经贷款人书面同意处置其重要财产等情况的；</p>
+<p>（9）现有的重要财产被其他债权人占有，并且根据贷款人判断该情形将影响借款人履行本合同下还款义务的；</p>
+<p>（10）本合同以外的其他借款、担保、赔偿、承诺或任何其他债务因违约而被勒令提前偿还或履行或到期而不能如期偿还或履行，以致影响或可能影响借款人在本合同下的履约能力；</p>
+<p>（11）贷款人认为借款人违反本合同的其他约定事项或有任何情势发生或持续而可能导致贷款人于本合同项下的债权实现受到不利威胁或实质性损害的情形。</p>
 <p>12.2上述12.1款下任一违约情形出现时，贷款人有权酌情给予借款人及/或担保人三至十五日的宽限期，由借款人及/或担保人进行整改或对因违约行为造成的损害后果进行有效补救，贷款人也有权不给予任何该等宽限期而立即采取以下任何一项或一项以上的违约救济措施：</p>
 <p>（1）要求借款人限期提供贷款人可以接受的其他担保；</p>
 <p>（2）暂缓放款；</p>
@@ -132,7 +134,7 @@
 <p>（10）直接向人民法院提起诉讼；</p>
 <p>（11）其他贷款人有权采取的救济措施。</p>
 <p>12.3如发生12.1款所规定的任何一项违约事件、本合同其他条款已明确约定了违约金的，借款人应按本合同约定的标准向贷款人支付违约金，直至违约行为得以完全纠正；借款人还应赔偿贷款人因借款人违约而遭受的损失以及贷款人因实现权利而支出的所有费用（有关费用事项详见本合同第三条的约定）。</p>
-<p><strong>第十三条 公证、贷款人债权实现和争议解决</strong></p>
+<p><strong>第十三条  公证、贷款人债权实现和争议解决</strong></p>
 <p>13.1<strong>借款人若不履行或不完全履行合同约定的义务，愿意接受依法强制执行。</strong></p>
 <p>借款人、贷款人双方均同意自本合同签署后3个工作日内到贷款人所在地公证机构申请对本合同办理具有强制执行效力的公证。</p>
 <p>13.2<strong>若借款人及/或担保人出现第十一条、12.1款规定的违约情形，则贷款人有权向公证本合同的公证机构申请执行证书并凭本合同的公证书和执行证书向有管辖权的人民法院申请强制执行，借款人自愿接受该有管辖权的人民法院强制执行；同时贷款人有权按照公证书赋予的强制执行效力直接向人民法院申请强制执行相关担保合同中约定的抵（质）押物或要求保证人承担连带清偿责任，借款人对此不得提出任何抗辩。</strong></p>
@@ -140,15 +142,14 @@
 <p>13.4若因任何原因，本合同不能/未以强制执行公证书直接由人民法院强制执行或贷款人不能/未以直接向人民法院申请实现担保物权的，关于本合同的所有争议、纠纷，选择下列第<u><strong>（2）</strong></u>项方式解决：</p>
 <p>（1）提交 <strong><u>/</u></strong> 仲裁委员会仲裁；</p>
 <p>（2）向贷款人所在地有管辖权的法院提起诉讼。</p>
-<p><strong>第十四条 通讯及送达</strong></p>
+<p><strong>第十四条  通讯及送达</strong></p>
 {% include 'dbms/agree/agree_board/loan_en/12-service-clause.html' %}
-<p><strong>第十五条 其他条款</strong></p>
-<p>15.1若借款人为2人及2人以上，各借款人不分份额、不分顺序地对本合同项下的全部贷款本息及相关费用承担偿还责任，即贷款人有权要求其中的任何一个借款人承担全部偿还责任，被要求承担偿还责任的借款人负有清偿贷款人全部债权的义务。</p>
-<p>15.2本合同所约定的借款人应承担的贷款人所花费律师费（律师代理费）是指贷款人依据四川省现行律师服务收费规定如/即《四川省律师服务收费管理实施办法》（川价发〔2008〕246号，含附件《四川省律师服务收费项目及标准》）所计算并承担/支付/花费的费用；如果确实由于案情需要，贷款人采用了其他付费标准或计费方式，借款人应据实承担。</p>
-<p>15.3贷款人在本合同项下的权利并不影响和排除其根据法律、法规和其它合同所享有的任何权利。任何对违约或延误行为施以任何宽容、宽限、优惠或延缓行使本合同项下的任何权利，均不能视为对本合同项下权利、权益的放弃或对任何违反本合同行为的许可或认可，也不限制、阻止和妨碍对该权利的继续行使或对其任何其它权利的行使，也不因此导致贷款人对借款人承担义务和责任。</p>
-<p>15.4本合同中的所有条款是可以分割的，任何条款的不可执行或无效应当不影响其他条款的有效性或可执行性。</p>
-<p>15.5<strong>本合同自借款人本人或授权代表签字[个体工商户借款的盖字号印章及经营者签字]、贷款人法定代表人或负责人或授权代表签字（或盖章）并加盖公章后生效。</strong></p>
-<p>15.6本合同正本一式<strong><u>{{ agree_copy_cn }}</u></strong>份，具有同等法律效力。</p>
+<p><strong>第十五条  其他条款</strong></p>
+<p>15.1本合同所约定的借款人应承担的贷款人所花费律师费（律师代理费）是指贷款人依据四川省现行律师服务收费规定如/即《四川省律师法律服务收费行业指导标准》(川发改价格〔2018〕93号)所计算并承担/支付/花费的费用；如果确实由于案情需要，贷款人采用了其他付费标准或计费方式，借款人应据实承担。</p>
+<p>15.2贷款人在本合同项下的权利并不影响和排除其根据法律、法规和其它合同所享有的任何权利。任何对违约或延误行为施以任何宽容、宽限、优惠或延缓行使本合同项下的任何权利，均不能视为对本合同项下权利、权益的放弃或对任何违反本合同行为的许可或认可，也不限制、阻止和妨碍对该权利的继续行使或对其任何其它权利的行使，也不因此导致贷款人对借款人承担义务和责任。</p>
+<p>15.3本合同中的所有条款是可以分割的，任何条款的不可执行或无效应当不影响其他条款的有效性或可执行性。</p>
+<p>15.4<strong>本合同经借款人、贷款人法定代表人或负责人或授权代表签字（或盖章）并加盖公章后生效。</strong></p>
+<p>15.5本合同正本一式<strong><u>{{ agree_copy_cn }}</u></strong>份，具有同等法律效力。</p>
 <p><strong>第十六条  其他约定事项</strong></p>
 <div>{% include 'dbms/agree/agree_board/blank-space.html' %}</div>
 <p><strong>借款人声明：借款人已通读上述条款，贷款人已应借款人的要求作了相应说明，借款人对所有内容无异议且已全部通晓并充分理解各条款的含义及相应法律后果。</strong></p>
