--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-s-d-n.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-s-d-n.html
@@ -51,6 +51,10 @@
         {% include 'dbms/agree/agree_board/counter/d/d-appendix-1.html' %}
     </div>
 
+    <div class="split">
+        {% include 'dbms/agree/agree_board/counter/d/d-appendix-2.html' %}
+    </div>
+
 </div>
 
 
