--- a/A_dbms/templates/dbms/report/balance/balance-class-director.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-director.html
@@ -6,23 +6,32 @@
             <th>序号</th>
             <th>项目经理</th>
             <th>放款笔数</th>
-            {% if PAGE_TITLE == '在保分类(按放款)' %}
-                <th>担保余额</th>
-            {% elif  PAGE_TITLE == '放款分类' %}
-                <th>发放额</th>
-            {% endif %}
+            <th>续贷金额</th>
+            <th>新增金额</th>
+            <th>发放总额</th>
+            <th>还款金额</th>
+            <th>在保余额</th>
         </tr>
         </thead>
         <tbody>
         {% for director in provide_groups_director %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ director.notify__agree__lending__summary__director__name }}</td>
-                <td align="right">{{ director.con }}</td>
-                <td align="right">{{ director.sum|floatformat:2 }}</td>
+            <tr style="padding: 0">
+                <td style="padding: 0">{{ forloop.counter }}</td>
+                <td style="padding: 0">
+                    <a target="_blank"
+                       href="{% url 'dbms:report_provid_w_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ director.notify__agree__lending__summary__director__name }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                        {{ director.notify__agree__lending__summary__director__name }}
+                    </a>
+                </td>
+                <td style="padding: 0" align="right">{{ director.con }}</td>
+                <td style="padding: 0" align="right">{{ director.sum_old|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ director.sum_new|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ director.sum|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ director.repayment|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ director.balance|floatformat:2 }}</td>
             </tr>
         {% endfor %}
-        {% include 'dbms/report/balance/balance-class.html' %}
+        {% include 'dbms/report/balance_accrual/balance-class.html' %}
         </tbody>
     </table>
 </div>
