--- a/A_dbms/templates/dbms/report/balance/balance-class-organization.html
+++ b/A_dbms/templates/dbms/report/balance/balance-class-organization.html
@@ -5,22 +5,29 @@
         <tr style="text-align: center">
             <th>放款银行</th>
             <th>放款笔数</th>
-            {% if PAGE_TITLE == '在保分类(按放款)' %}
-                <th>担保余额</th>
-            {% elif  PAGE_TITLE == '放款分类' %}
-                <th>发放额</th>
-            {% endif %}
+            <th>续贷金额</th>
+            <th>新增金额</th>
+            <th>发放总额</th>
+            <th>还款金额</th>
+            <th>在保余额</th>
         </tr>
         </thead>
         <tbody>
         {% for organization in provide_groups_organization %}
             {% if organization.notify__agree__lending__summary__expert__organization == '泰和泰律师事务所' or organization.notify__agree__lending__summary__expert__organization == '明之鉴律师事务所' %}
-                <tr>
-                    <td>
-                        {{ organization.notify__agree__lending__summary__expert__organization }}
+                <tr style="padding: 0">
+                    <td style="padding: 0">
+                        <a target="_blank"
+                           href="{% url 'dbms:report_provid_w_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ organization.notify__agree__lending__summary__expert__organization }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                            {{ organization.notify__agree__lending__summary__expert__organization }}
+                        </a>
                     </td>
-                    <td align="right">{{ organization.con }}</td>
-                    <td align="right">{{ organization.sum|floatformat:2 }}</td>
+                    <td style="padding: 0" align="right">{{ organization.con }}</td>
+                    <td style="padding: 0" align="right">{{ organization.sum_old|floatformat:2 }}</td>
+                    <td style="padding: 0" align="right">{{ organization.sum_new|floatformat:2 }}</td>
+                    <td style="padding: 0" align="right">{{ organization.sum|floatformat:2 }}</td>
+                    <td style="padding: 0" align="right">{{ organization.repayment|floatformat:2 }}</td>
+                    <td style="padding: 0" align="right">{{ organization.balance|floatformat:2 }}</td>
                 </tr>
             {% endif %}
         {% endfor %}
