--- a/A_dbms/templates/dbms/report/balance_accrual/balance-class-assistant.html
+++ b/A_dbms/templates/dbms/report/balance_accrual/balance-class-assistant.html
@@ -9,17 +9,26 @@
             <th>续贷金额</th>
             <th>新增金额</th>
             <th>发放总额</th>
+            <th>还款金额</th>
+            <th>在保余额</th>
         </tr>
         </thead>
         <tbody>
         {% for assistant in provide_groups_assistant %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ assistant.notify__agree__lending__summary__assistant__name }}</td>
-                <td align="right">{{ assistant.con }}</td>
-                <td align="right">{{ assistant.sum_old|floatformat:2  }}</td>
-                <td align="right">{{ assistant.sum_new|floatformat:2  }}</td>
-                <td align="right">{{ assistant.sum|floatformat:2 }}</td>
+            <tr style="padding: 0">
+                <td style="padding: 0">{{ forloop.counter }}</td>
+                <td style="padding: 0">
+                    <a target="_blank"
+                       href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ assistant.notify__agree__lending__summary__assistant__name }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                        {{ assistant.notify__agree__lending__summary__assistant__name }}
+                    </a>
+                </td>
+                <td style="padding: 0" align="right">{{ assistant.con }}</td>
+                <td style="padding: 0" align="right">{{ assistant.sum_old|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ assistant.sum_new|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ assistant.sum|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ assistant.repayment|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ assistant.balance|floatformat:2 }}</td>
             </tr>
         {% endfor %}
         {% include 'dbms/report/balance_accrual/balance-class.html' %}
