--- a/A_dbms/templates/dbms/report/balance_accrual/balance-class-branch.html
+++ b/A_dbms/templates/dbms/report/balance_accrual/balance-class-branch.html
@@ -9,17 +9,26 @@
             <th>续贷金额</th>
             <th>新增金额</th>
             <th>发放总额</th>
+            <th>还款金额</th>
+            <th>在保余额</th>
         </tr>
         </thead>
         <tbody>
         {% for branch in provide_groups_branch %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
-                <td>{{ branch.notify__agree__branch__short_name }}</td>
-                <td align="right">{{ branch.con }}</td>
-                <td align="right">{{ branch.sum_old|floatformat:2  }}</td>
-                <td align="right">{{ branch.sum_new|floatformat:2  }}</td>
-                <td align="right">{{ branch.sum|floatformat:2 }}</td>
+            <tr style="padding: 0">
+                <td style="padding: 0">{{ forloop.counter }}</td>
+                <td style="padding: 0">
+                    <a target="_blank"
+                       href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ branch.notify__agree__branch__short_name }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                        {{ branch.notify__agree__branch__short_name }}
+                    </a>
+                </td>
+                <td style="padding: 0" align="right">{{ branch.con }}</td>
+                <td style="padding: 0" align="right">{{ branch.sum_old|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ branch.sum_new|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ branch.sum|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ branch.repayment|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ branch.balance|floatformat:2 }}</td>
             </tr>
         {% endfor %}
         {% include 'dbms/report/balance_accrual/balance-class.html' %}
