--- a/A_dbms/templates/dbms/report/balance_accrual/balance-class-breed.html
+++ b/A_dbms/templates/dbms/report/balance_accrual/balance-class-breed.html
@@ -9,33 +9,60 @@
             <th>续贷金额</th>
             <th>新增金额</th>
             <th>发放总额</th>
+            <th>还款金额</th>
+            <th>在保余额</th>
         </tr>
         </thead>
         <tbody>
         {% for breed in provide_groups_breed %}
-            <tr>
-                <td>{{ forloop.counter }}</td>
+            <tr style="padding: 0">
+                <td style="padding: 0">{{ forloop.counter }}</td>
                 {#                PROVIDE_TYP_LIST = [(1, '流贷'), (11, '承兑'), (21, '保函'), (31, '委贷'),#}
                 {#                        (41, '过桥贷'), (52, '房抵贷'), (53, '担保贷')]#}
-                {% if breed.provide_typ == 1 %}
-                    <td>{{ provide_typ_dic.1 }}</td>
-                {% elif breed.provide_typ == 11 %}
-                    <td>{{ provide_typ_dic.11 }}</td>
-                {% elif breed.provide_typ == 21 %}
-                    <td>{{ provide_typ_dic.21 }}</td>
-                {% elif breed.provide_typ == 31 %}
-                    <td>{{ provide_typ_dic.31 }}</td>
-                {% elif breed.provide_typ == 41 %}
-                    <td>{{ provide_typ_dic.41 }}</td>
-                {% elif breed.provide_typ == 52 %}
-                    <td>{{ provide_typ_dic.52 }}</td>
-                {% elif breed.provide_typ == 53 %}
-                    <td>{{ provide_typ_dic.53 }}</td>
-                {% endif %}
-                <td align="right">{{ breed.con }}</td>
-                <td align="right">{{ breed.sum_old|floatformat:2 }}</td>
-                <td align="right">{{ breed.sum_new|floatformat:2 }}</td>
-                <td align="right">{{ breed.sum|floatformat:2 }}</td>
+                <td style="padding: 0">
+                    {% if breed.provide_typ == 1 %}
+                        <a target="_blank"
+                           href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ provide_typ_dic.1 }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                            {{ provide_typ_dic.1 }}
+                        </a>
+                    {% elif breed.provide_typ == 11 %}
+                        <a target="_blank"
+                           href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ provide_typ_dic.11 }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                            {{ provide_typ_dic.11 }}
+                        </a>
+                    {% elif breed.provide_typ == 21 %}
+                        <a target="_blank"
+                           href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ provide_typ_dic.21 }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                            {{ provide_typ_dic.21 }}
+                        </a>
+                    {% elif breed.provide_typ == 31 %}
+                        <a target="_blank"
+                           href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ provide_typ_dic.31 }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                            {{ provide_typ_dic.31 }}
+                        </a>
+                    {% elif breed.provide_typ == 41 %}
+                        <a target="_blank"
+                           href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ provide_typ_dic.41 }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                            {{ provide_typ_dic.41 }}
+                        </a>
+                    {% elif breed.provide_typ == 52 %}
+                        <a target="_blank"
+                           href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ provide_typ_dic.52 }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                            {{ provide_typ_dic.52 }}
+                        </a>
+                    {% elif breed.provide_typ == 53 %}
+                        <a target="_blank"
+                           href="{% url 'dbms:report_provide_class_list' c_typ=kwargs.c_typ t_typ=kwargs.t_typ %}?_cs={{ provide_typ_dic.53 }}&tf={{ tf_r }}&tl={{ tl_r }}">
+                            {{ provide_typ_dic.53 }}
+                        </a>
+                    {% endif %}
+                </td>
+                <td style="padding: 0" align="right">{{ breed.con }}</td>
+                <td style="padding: 0" align="right">{{ breed.sum_old|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ breed.sum_new|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ breed.sum|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ breed.repayment|floatformat:2 }}</td>
+                <td style="padding: 0" align="right">{{ breed.balance|floatformat:2 }}</td>
             </tr>
         {% endfor %}
         {% include 'dbms/report/balance_accrual/balance-class.html' %}
