--- a/A_dbms/templates/dbms/report/list/article-table.html
+++ b/A_dbms/templates/dbms/report/list/article-table.html
@@ -53,16 +53,16 @@
         {% endfor %}
         <tr style="padding: 0">
             <td style="padding: 0" align="center" colspan="2">合计</td>
-            <td style="padding: 0">{{ article_amount_tot|floatformat:2 }}</td>
+            <td style="padding: 0" align="right">{{ article_amount_tot|floatformat:2 }}</td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
-            <td style="padding: 0">{{ article_provide_tot|floatformat:2 }}</td>
-            <td style="padding: 0">{{ article_repayment_tot|floatformat:2 }}</td>
-            <td style="padding: 0">{{ article_balance_tot|floatformat:2 }}</td>
+            <td style="padding: 0" align="right">{{ article_provide_tot|floatformat:2 }}</td>
+            <td style="padding: 0" align="right">{{ article_repayment_tot|floatformat:2 }}</td>
+            <td style="padding: 0" align="right">{{ article_balance_tot|floatformat:2 }}</td>
             <td style="padding: 0"></td>
         </tr>
         </tbody>
