--- a/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_co/l-c-s-d.html
@@ -22,7 +22,7 @@
             </p>
             <p><strong>第一条 抵押财产</strong></p>
             <p>1.1抵押人提供的抵押财产是：<strong><u>{{ counter_property_type }}</u></strong>（以下称“抵押物”）。</p>
-            <p>1.2抵押财产的详细情况以本合同所附“抵押物清单”为准。该抵押物清单为本合同组成部分，与本合同具有同等法律效力。</p>
+            <p>1.2抵押财产的详细情况以本合同所附“抵押物清单”为准。</p>
             <p>1.3抵押权的效力及于抵押物及其从物、从权利、附着物、附合物、加工物、孳息及代位物。</p>
             <p>1.4抵押人保证对抵押物依法享有所有权或处分权，并保证抵押物不存在任何权属争议、被查封、被扣押、已出租等情况。</p>
             <p>1.5（如有共有人）共有人均同意以抵押物为主合同项下债权提供抵押担保，并接受本合同约束。</p>
@@ -149,7 +149,7 @@
             <p>11.4抵押人有逃避抵押权人监督、拖欠抵押担保债务、恶意逃废债等行为时，抵押权人有权将该种行为向有关单位通报，并在新闻媒体上公告。</p>
             <p>11.5若有任何已经签署的有关抵押的合同与本合同条款相冲突，以本合同相应条款为准。</p>
             <p>11.6<strong>本合同经企业或者其他组织抵押人法定代表人或负责人或授权代表签字（或盖章）并加盖公章（自然人抵押人本人或授权代表签字）、抵押权人法定代表人或负责人或授权代表签字（或盖章）并加盖公章后生效。</strong></p>
-            <p>11.7本合同正本一式<strong><u>{{ counter_copy_cn }}</u></strong>份，具有同等效力。</p>
+            <p>11.7本合同正本一式<strong><u>{{ counter_copy_cn }}</u></strong>份，具有同等效力。本合同附件为本合同不可分割的组成部分，与本合同具有同等法律效力。</p>
             <p><strong>第十二条 其他约定事项</strong></p>
             <div>{% include 'dbms/agree/agree_board/counter-other-space.html' %}</div>
             <p><strong>抵押人声明：抵押人已对本合同各条款作全面、准确的理解，抵押权人应抵押人的要求作了相应的条款说明，签约各方对本合同含义理解认识一致，不存在任何歧义。抵押人对本合同的签署意味着对本合同条款的全面理解、接受和对声明内容的确认，否则应不予签署。</strong>
