--- a/A_dbms/templates/dbms/report/summary/accrual.html
+++ b/A_dbms/templates/dbms/report/summary/accrual.html
@@ -4,6 +4,9 @@
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_provide_accrual' p_typ=0 t_typ=1 %}">
             项目明细表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_repay_list' t_typ=1 %}">
+            还款明细表</a></label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_accrual_class' c_typ=1 t_typ=1 %}">
             放款分类统计表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
