--- a/A_dbms/templates/dbms/report/repay/repay_list-table.html
+++ b/A_dbms/templates/dbms/report/repay/repay_list-table.html
@@ -49,7 +49,7 @@
                 <td style="padding: 0">{{ repay.provide.notify.agree.lending.summary.custom.short_name }}</td>
                 <td style="padding: 0">{{ repay.provide.notify.agree.branch.short_name }}</td>
                 <td style="padding: 0" align="right">{{ repay.repayment_money|floatformat:'2' }}</td>
-                <td style="padding: 0">{{ repay.repayment_date }}</td>
+                <td style="padding: 0" align="right">{{ repay.repayment_date }}</td>
             </tr>
         {% endfor %}
         <tr>
