--- a/A_dbms/templates/dbms/report/report-summry.html
+++ b/A_dbms/templates/dbms/report/report-summry.html
@@ -1,4 +1,5 @@
 <div class="panel panel-default">
     {% include 'dbms/report/summary/balance.html' %}
     {% include 'dbms/report/summary/accrual.html' %}
+    {% include 'dbms/report/summary/meeting.html' %}
 </div>
