--- a/A_dbms/templates/dbms/report/list/custom-table.html
+++ b/A_dbms/templates/dbms/report/list/custom-table.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>{{ t_typ_this }}客户分类明细表（按{{ c_typ_this }}：{{ ss_value }}）</caption>
+        <caption>{{ t_typ_this }}客户分类明细表（按{{ c_typ_this }}：{{ ss_value }}）（截止日：{{ td }})</caption>
         <thead>
         <tr style="text-align: center">
             <th>客户名称({{ custom_acount }})</th>
