--- a/A_dbms/templates/dbms/report/balance_custom/balance-class-depart.html
+++ b/A_dbms/templates/dbms/report/balance_custom/balance-class-depart.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>{{ t_typ_t }}{{ PAGE_TITLE }}统计表（按部门）</caption>
+        <caption>{{ t_typ_t }}{{ PAGE_TITLE }}统计表（按部门）（截止日：{{ td }}）</caption>
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
