--- a/A_dbms/templates/dbms/custom/scan/custom-summry-c.html
+++ b/A_dbms/templates/dbms/custom/scan/custom-summry-c.html
@@ -23,4 +23,7 @@
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         保函余额：{{ custom_obj.custom_back }}
     </label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        风险分类：{{ custom_obj.get_classification_display }}
+    </label>
 </div>
