--- a/A_dbms/templates/dbms/report/balance-class-provide.html
+++ b/A_dbms/templates/dbms/report/balance-class-provide.html
@@ -19,6 +19,8 @@
             {% include 'dbms/report/balance/balance-class-district.html' %}
         {% elif kwargs.c_typ == 31 %}
             {% include 'dbms/report/balance/balance-class-idustry.html' %}
+        {% elif kwargs.c_typ == 33 %}
+            {% include 'dbms/report/balance/balance-class-fication.html' %}
         {% elif kwargs.c_typ == 35 %}
             {% include 'dbms/report/balance/balance-class-depart.html' %}
         {% elif kwargs.c_typ == 41 %}
