--- a/A_dbms/templates/dbms/report/report-summry.html
+++ b/A_dbms/templates/dbms/report/report-summry.html
@@ -2,4 +2,5 @@
     {% include 'dbms/report/summary/balance.html' %}
     {% include 'dbms/report/summary/accrual.html' %}
     {% include 'dbms/report/summary/meeting.html' %}
+    {% include 'dbms/report/summary/month.html' %}
 </div>
