--- a/A_dbms/templates/dbms/review/review-scan.html
+++ b/A_dbms/templates/dbms/review/review-scan.html
@@ -8,6 +8,7 @@
         {% include 'dbms/custom/scan/custom-tab.html' %}
         {% include 'dbms/review/modl/review-plan-mod.html' %}
         {% include 'dbms/review/modl/review-add-mod.html' %}
+        {% include 'dbms/review/modl/review-auto-add-mod.html' %}
         {% include 'dbms/review/modl/review-del-mod.html' %}
         {% include 'dbms/review/modl/investigate-add-mod.html' %}
         {% include 'dbms/review/modl/investigate-del-mod.html' %}
