--- a/A_dbms/templates/dbms/report/balance_accrual/balance-class-bank.html
+++ b/A_dbms/templates/dbms/report/balance_accrual/balance-class-bank.html
@@ -1,6 +1,6 @@
 <div class="table-responsive">
     <table class="table table-bordered table-hover table-condensed active">
-        <caption>{{ PAGE_TITLE }}统计表（按银行）（{{ tf_r }}至{{ tl_r }}）</caption>
+        <caption>{{ PAGE_TITLE }}（按银行）（{{ tf_r }}至{{ tl_r }}）</caption>
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
