--- a/A_dbms/templates/dbms/report/summary/balance.html
+++ b/A_dbms/templates/dbms/report/summary/balance.html
@@ -2,10 +2,10 @@
 <div class="panel-body row" style="padding: 1px;">
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_provide_list' p_typ=0 t_typ=0 %}">
-            在保项目明细表</a></label>
+            在保放款明细表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_balance_class' c_typ=1 t_typ=0 %}">
-            在保项目分类（按放款）</a></label>
+            在保放款分类（按放款）</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_article_class' c_typ=2 t_typ=0 %}">
             在保项目分类（按项目）</a></label>
