--- a/A_dbms/templates/dbms/review/modl/fication-add-mod.html
+++ b/A_dbms/templates/dbms/review/modl/fication-add-mod.html
@@ -1,24 +1,23 @@
-<div class="modal fade" id="addReviewOwnModal" tabindex="-1"
-     role="dialog" aria-labelledby="addReviewOwnModal">
+<div class="modal fade" id="claFicationModal" tabindex="-1"
+     role="dialog" aria-labelledby="claFicationModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addReviewOwnModalLabel">保后
-                    <input style="display: none" name="custom_id" value="{{ custom_obj.id }}">
-                    <input style="display: none" name="review_id" value="N">
+                <h4 class="modal-title" id="claFicationModalLabel">五级分类
+                    <input style="display: none" name="provide_id" id="claFicationModalId">
                 </h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
-                    {% include 'dbms/review/modl/mod_form/review-auto-add.html' %}
+                    {% include 'dbms/review/modl/mod_form/fication-add.html' %}
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="addReviewOwnModalOk">添加</button>
+                <button type="button" class="btn btn-primary" id="claFicationModalOk">添加</button>
             </div>
         </div>
     </div>
